fixing description overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -523,22 +523,24 @@ body .modal-admin {
 }
 
 .thumbnails {
-    height: 160px;
+    position: relative;
+    height: 200px;
     width: auto;
     /*padding: 10px;*/
     /*border: 5px solid #5b5b5b;*/
-    margin: 10px;
+    margin: auto;
 }
 
 .descriptionContainer {
     position: relative;
-    width: 400px;
+    width: 600px;
 }
 
 .thumbnailHolder {
+    position: relative;
     display: flex;
     flex-direction: row;
-    /*justify-content: space-around;*/
+    justify-content: space-between;
     /*padding: 10px;*/
 }
 
